--- a/listing_decoder.html
+++ b/listing_decoder.html
@@ -8,7 +8,7 @@ javascript-list:
 <!-- hero section -->
 <section class="hero-section">
   <div class="content">     
-    <img class="logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
+    <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
     <h1>Listing Decoder</h1>
     <strong>ARRRmada merchant listing tool</strong>
     <p>Use this form to decode the custom listing codes</p>
