--- a/listing_guidelines.html
+++ b/listing_guidelines.html
@@ -4,7 +4,7 @@ css-list:
   - "assets/css/guidelines.css"
 ---
 <section class="guidelines">
-  <img class="logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
+  <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
   <div class="content">
     <h2>Merchant Listing Guidelines</h2>
 
