--- a/payment_gateways.html
+++ b/payment_gateways.html
@@ -7,7 +7,7 @@ css-list:
 <section class="hero-section">
   <div class="content">  
     <div class="coin">    
-      <img class="digital-coin" src="{{ site.baseurl }}/assets/img/site/p_coin.png" />
+      <img class="digital-coin" alt="Pirate Digital Coin" src="{{ site.baseurl }}/assets/img/site/p_coin.png" />
     </div>
     <div>
       <h1>Payment Gateways</h1>
@@ -56,7 +56,7 @@ css-list:
         </div>
     </div>
     </div>
-    <img class="divider" src="{{ site.baseurl }}/assets/img/site/triangle-bottom.svg" />
+    <img class="divider" alt="page divider" src="{{ site.baseurl }}/assets/img/site/triangle-bottom.svg" />
   </section>
 
 <!-- gateways-section -->
