--- a/listing_tool.html
+++ b/listing_tool.html
@@ -9,7 +9,7 @@ javascript-list:
 <!-- hero section -->
 <section class="hero-section">
   <div class="content">      
-    <img class="logo" src="{{ site.baseurl }}/button/button6.png" style="max-width: 300px;margin: 40px auto;"/>
+    <img class="logo" alt="Pirate Accepted Here" src="{{ site.baseurl }}/button/button6.png" style="max-width: 300px;margin: 40px auto;"/>
     <div>
       <h1>Merchant Listing Tool</h1>
       <strong>Begin accepting ARRR today!</strong>
@@ -46,7 +46,7 @@ javascript-list:
     <label for="listing_preview">Listing Preview:</label>
     <div class="merchant-box" id="listing_preview">
       <div class="merchant-imgbox">
-        <img  class="merchant-img" src="{{ site.baseurl }}/assets/img/site/default_merchant.png" id="merchant_img" />
+        <img alt="Default Merchant Image" class="merchant-img" src="{{ site.baseurl }}/assets/img/site/default_merchant.png" id="merchant_img" />
       </div>
       <h2 id="merchant_name"></h2>
       <p class="merchant-description" id="merchant_description"></p>
