--- a/404.html
+++ b/404.html
@@ -11,5 +11,5 @@ locale: en_US
     <img style="width: 100%; display: block; margin: 60px auto 40px;"
       src="{{ site.baseurl }}/assets/img/site/404.gif"/>
   </a>
-  <a class="btn" href="{{ site.baseurl }}/index">Walk the Plank</a>
+  <a class="btn" href="{{ site.baseurl }}/index">Walk the Plank 🏴‍☠️</a>
 </div>
