--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ javascript-list:
     <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
     <div>
       <h1><span class="arrr">ARRR</span>mada</h1>
-      <strong>ARRR accepted here</strong>
+      <strong>$ARRR accepted here</strong>
       <p>
         A directory of Pirate Chain merchants<br />
         and online commerce tools
@@ -31,13 +31,13 @@ javascript-list:
       <h3>Your Harrrbour for Secure and Private E-Commerce</h3>
       <p>
         The ARRRmada is a fleet of merchant ships, including stores, service providers, and 
-        businesses, that accept ARRR as a trusted form of payment. ARRR, the native currency of the Pirate Chain 
+        businesses, that accept $ARRR as a trusted form of payment. $ARRR, the native currency of the Pirate Chain 
         network, blends the convinince of online transactions with the privacy of using cash, making it an ideal 
         choice for the digital economy.
       </p>
       <p>
         Our incredible merchants are at the heart of growing a strong commerce based community. If you are a online merchant
-         that values privacy and financial sovereignty, consider joining the ARRRmada and begin accepting ARRR today!
+         that values privacy and financial sovereignty, consider joining the ARRRmada and begin accepting $ARRR today!
 
         <a class="btn" href="{{ site.baseurl }}/listing_tool" title="Add your store to the directory">List Your Store +</a>
       </p>
