--- a/payment_gateways.html
+++ b/payment_gateways.html
@@ -11,9 +11,9 @@ css-list:
     </div>
     <div>
       <h1>Payment Gateways</h1>
-      <strong>Solutions to accept ARRR</strong>
+      <strong>Solutions to accept $ARRR</strong>
       <p>
-        Pirate Chain provides options for accepting ARRR across various platforms including WordPress, 
+        Pirate Chain provides options for accepting $ARRR across various platforms including WordPress, 
         HTML, Shopify, and more. Discover all payment solutions here.
       </p>
       <a class="btn" href="{{ site.baseurl }}/" title="View Pirate Chain merchants">◄ HOME</a>
@@ -38,20 +38,20 @@ css-list:
         <img alt="payment gateways" src="{{ site.baseurl }}/assets/img/site/gateways.jpg"/>
       </div>
       <div class="right-box">
-        <h2>Which Gateways Support ARRR?</h2>
+        <h2>Which Gateways Support $ARRR?</h2>
         <p>
-          The gateways detailed here enable you to accept ARRR payments on your website. 
+          The gateways detailed here enable you to accept $ARRR payments on your website. 
           Together with our partners, we provide various options to accept e-commerce transactions, 
           donations, service fees, and more.
         </p>
         <p>
-          In the Pirate Chain network, all transactions remain anonymous. Accept ARRR payments directly, with no 
+          In the Pirate Chain network, all transactions remain anonymous. Accept $ARRR payments directly, with no 
           intermediaries or middle-man. You can opt for a free WordPress/WooCommerce solution, or select Shopify, 
           OpenCart, HTML, or a multi-platform alternative.
         </p>
         <p>
           Should you have any inquiries or require assistance with the individual gateways, feel free to 
-          reach out to us on the community <a title="chat at the community discord" href="https://pirate.black/discord">Discord</a>.
+          reach out to us on the community <a title="chat at the community discord" href="https://pirate.black/discord" target="_blank">Discord</a>.
         </p>
         </div>
     </div>
@@ -63,7 +63,7 @@ css-list:
 <section class="gateway-listings-section">
   <div class="content"> 
     {% for gateway in site.data.gateways %}    
-        <a href="{{ gateway.url}}"
+        <a href="{{ gateway.url}}" target="_blank" 
         title="go to {{ gateway.name }}'s website"
         class="gateway-box" >
           <div class="gateway-imgbox">
