--- a/listing_tool.html
+++ b/listing_tool.html
@@ -99,6 +99,13 @@ javascript-list:
       <p>
         <a style="font-size: 20px;" href="{{ site.repo }}/issues/new?assignees=&labels=&projects=&template=merchant_listing_submission.yaml" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
       </p>
+      <p>
+       You also have the option to submit your entry with a Sapling transaction. You can simply copy the complete code and send it as a memo within the transaction to the following address:</p>
+      <p>
+        zs1uud9mr4mth03cnk96d2ssjhjzg28ugq8zk5vvezqam9h9em3sr9d7582ststcrrcqecujrcx9w9
+      </p>
+      <p>Please be patient, both options may cause delays as the entries are checked manually. 
+      </p>
     </div>
   </div>
 </section>
