--- a/listing_tool.html
+++ b/listing_tool.html
@@ -87,6 +87,7 @@ javascript-list:
     
     <div id="submitListing">
       <h2>SUBMIT YOUR LISTING</h2>
+      <p>You have two options to submit the code and thus your listing. One is via Github, for which you need an account on Github. And secondly, with the help of a Sapling transaction.
       <p>
         <b>SAVE YOUR CODE</b> - The code you've generated represents your unique listing. Be sure to save it before leaving this page.
       </p>
@@ -100,10 +101,12 @@ javascript-list:
         <a style="font-size: 20px;" href="{{ site.repo }}/issues/new?assignees=&labels=&projects=&template=merchant_listing_submission.yaml" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
       </p>
       <p>
-       You also have the option to submit your entry with a Sapling transaction. You can simply copy the complete code and send it as a memo within the transaction to the following address:</p>
+       You also have the <strong>option to submit your entry with a Sapling transaction</strong>. You can simply copy the complete code and send it as a memo within the transaction to the following address:</p>
       <p>
         zs1uud9mr4mth03cnk96d2ssjhjzg28ugq8zk5vvezqam9h9em3sr9d7582ststcrrcqecujrcx9w9
       </p>
+      <p>Please note that if you register your listing in a Sapling transaction, you must also send the path to an image with the generated listing code if an image is to be displayed in 
+        addition to the link and description. </p>
       <p>Please be patient, both options may cause delays as the entries are checked manually. 
       </p>
     </div>
