--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ javascript-list:
   - "assets/js/index.js"
 ---
 <!-- hero section -->
-<section class="hero-section donation-hero"
-  style="background-image: url('{{ site.baseurl }}/assets/img/site/arrrmada_bg.png');">
+<section class="hero-section"
+  style="background-image: url('{{ site.baseurl }}/assets/img/site/arrrmada_bg.jpg');">
   <div class="content">      
     <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
     <div>
