--- a/listing_tool.html
+++ b/listing_tool.html
@@ -98,7 +98,7 @@ javascript-list:
         To submit your listing for review in the ARRRmada directory, please initiate a GitHub form below where you will paste your code and upload the chosen image.
       </p>
       <p>
-        <a style="font-size: 20px;" href="{{ site.repo }}/issues/new?assignees=&labels=&projects=&template=merchant_listing_submission.yaml" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
+        <a class="btn" href="{{ site.repo }}/issues/new?assignees=&labels=&projects=&template=merchant_listing_submission.yaml" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
       </p>
       <p>
        You also have the second <strong>option to submit your entry with a Sapling transaction</strong>. You can simply copy the complete code and send it as a memo within the transaction to the following address:</p>
