Various changes, flex/grid/theme

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ javascript-list:
          data-tags='{{ merchant.tags | join: "," }}'
          id="{{ merchant.id }}" 
          title="go to {{ merchant.name }}'s website" >        
-      <a href="{{ merchant.url }}" target="_blank" rel="noopener noreferrer">
+      <a class="merchant-link-area" href="{{ merchant.url }}" target="_blank" rel="noopener noreferrer">
         <div class="merchant-imgbox">
           <img class="merchant-img lazy"
                data-src="{{ site.baseurl }}/assets/img/merchants/{{ merchant.image }}" 
