--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ javascript-list:
       </p>
     </div>
     <div class="merchants">
-      <p>
+      
         <img src="{{ site.baseurl }}/assets/img/icons/anchor.svg" alt="just an anchor" />
         <span id="merchantCount" class="count">{{ site.data.merchants.size }}</span>
         MERCHANTS
-      </p>
+      
     </div>    
   </div>
 
@@ -67,7 +67,7 @@ javascript-list:
       58 18 88 18
       v44h-352z" />
     </defs>
-    <g class="parallax1">
+    <!-- <g class="parallax1">
       <use xlink:href="#gentle-wave" x="50" y="3" fill="rgba(32,32,54,.4)"/>
     </g>
     <g class="parallax2">
@@ -75,7 +75,7 @@ javascript-list:
     </g>
     <g class="parallax3">
       <use xlink:href="#gentle-wave" x="50" y="9" fill="rgba(32,32,54,.8)"/>
-    </g>
+    </g> -->
     <g class="parallax4" style="z-index:999999;">
       <use xlink:href="#gentle-wave" x="50" y="6" fill="rgba(35,37,45,1)"/>  
     </g>
