Native lazy load for less JS and new light mode.

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ javascript-list:
          title="go to {{ merchant.name }}'s website" >        
       <a class="merchant-link-area" href="{{ merchant.url }}" target="_blank" rel="noopener noreferrer">
         <div class="merchant-imgbox">
-          <img class="merchant-img lazy"
+          <img loading="lazy" class="merchant-img"
                data-src="{{ site.baseurl }}/assets/img/merchants/{{ merchant.image }}" 
-               src="{{ site.baseurl }}/assets/img/site/default_merchant.png"
+               src="{{ site.baseurl }}/assets/img/merchants/{{ merchant.image }}"
                alt="{{ merchant.name }}">
         </div>
         <h2>{{ merchant.name }}</h2>
