Various changes and gateways page changes.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ javascript-list:
   - "assets/js/index.js"
 ---
 <!-- hero section -->
-<section class="hero-section"
+<section class="hero-section waves" id="mainPage"
   style="background-image: url('{{ site.baseurl }}/assets/img/site/arrrmada_bg.jpg');">
   <div class="content">      
     <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
@@ -67,15 +67,6 @@ javascript-list:
       58 18 88 18
       v44h-352z" />
     </defs>
-    <!-- <g class="parallax1">
-      <use xlink:href="#gentle-wave" x="50" y="3" fill="rgba(32,32,54,.4)"/>
-    </g>
-    <g class="parallax2">
-      <use xlink:href="#gentle-wave" x="50" y="0" fill="rgba(21,19,38,0.7)"/>
-    </g>
-    <g class="parallax3">
-      <use xlink:href="#gentle-wave" x="50" y="9" fill="rgba(32,32,54,.8)"/>
-    </g> -->
     <g class="parallax4" style="z-index:999999;">
       <use xlink:href="#gentle-wave" x="50" y="6" fill="rgba(35,37,45,1)"/>  
     </g>
