--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ javascript-list:
   - "assets/js/index.js"
 ---
 <!-- hero section -->
-<section class="hero-section waves" id="mainPage"
+<section class="hero-section" id="mainPage"
   style="background-image: url('{{ site.baseurl }}/assets/img/site/arrrmada_bg.jpg');">
   <div class="content">      
     <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
