--- a/payment_gateways.html
+++ b/payment_gateways.html
@@ -45,41 +45,58 @@ css-list:
 
 <!-- gateway-explanation section -->
 <section class="gateway-explanation">
-  <div class="content"> 
-    <img class="p" alt="pirate logo" src="{{ site.baseurl }}/assets/img/logo/Pirate_Logo_P_Gold.svg" />   
+  <div class="gateway-info">
+    <div class="gateway-textbox">
+    <div class="p-logo-box">
+      <img class="p-logo" alt="pirate logo" src="{{ site.baseurl }}/assets/img/logo/Pirate_Logo_P_Gold.svg" />   
+    </div>
     <h2>Boost your business with the Pirate Chain Privacy Coin</h2> 
     <p>
         Ready to accept cryptocurrency payments, especially with ARRR? Explore more about our merchant solutions. 
-    </p>    
-
-    <div class="solutions">
-      <div class="left-box">
-        <img alt="payment gateways" src="{{ site.baseurl }}/assets/img/site/gateways.jpg"/>
-      </div>
-      <div class="right-box">
-        <h2>Which Gateways Support $ARRR?</h2>
-        <p>
-          The gateways detailed here enable you to accept $ARRR payments on your website. 
-          Together with our partners, we provide various options to accept e-commerce transactions, 
-          donations, service fees, and more.
-        </p>
-        <p>
-          In the Pirate Chain network, all transactions remain anonymous. Accept $ARRR payments directly, with no 
-          intermediaries or middle-man. You can opt for a free WordPress/WooCommerce solution, or select Shopify, 
-          OpenCart, HTML, or a multi-platform alternative.
-        </p>
-        <p>
-          Should you have any inquiries or require assistance with the individual gateways, feel free to 
-          reach out to us on the community <a title="chat at the community discord" href="https://pirate.black/discord" target="_blank">Discord</a>.
-        </p>
-        </div>
+    </p>  
+  </div>
+<div class="gateway-textbox">  
+    <h2>Which Gateways Support $ARRR?</h2>
+    <p>
+      The gateways detailed here enable you to accept $ARRR payments on your website. 
+      Together with our partners, we provide various options to accept e-commerce transactions, 
+      donations, service fees, and more.
+    </p>
+    <p>
+      In the Pirate Chain network, all transactions remain anonymous. Accept $ARRR payments directly, with no 
+      intermediaries or middle-man. You can opt for a free WordPress/WooCommerce solution, or select Shopify, 
+      OpenCart, HTML, or a multi-platform alternative.
+    </p>
+    <p>
+      Should you have any inquiries or require assistance with the individual gateways, feel free to 
+      reach out to us on the community <a title="chat at the community discord" href="https://pirate.black/discord" target="_blank">Discord</a>.
+    </p>
+  </div>
     </div>
-    </div>
-  
+       <!-- waves effect -->
+       <svg class="editorial" style="z-index: 20000;"
+       xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       viewBox="0 24 150 28 "
+       preserveAspectRatio="none">
+     <defs>
+       <path id="gentle-wave"
+       d="M-160 44c30 0 
+       58-18 88-18s
+       58 18 88 18 
+       58-18 88-18 
+       58 18 88 18
+       v44h-352z" />
+     </defs>
+     <g class="parallax4" style="z-index:999999;">
+       <use xlink:href="#gentle-wave" x="50" y="6" fill="var(--pirate-smoke-blue)"/>  
+     </g>
+   </svg>
   </section>
 
 <!-- gateways-section -->
 <section class="gateway-listings-section">
+ 
   <div class="content"> 
     {% for gateway in site.data.gateways %}    
         <a href="{{ gateway.url}}" target="_blank" 
