--- a/guide.html
+++ b/guide.html
@@ -1,1 +1,10 @@
-<h1>Coming Soon</h1>
+---
+layout: page
+css-list:
+  - "assets/css/index.css"
+javascript-list:
+  - "assets/js/index.js"
+---
+<section id="guide" style="height: calc(100dvh - 270px); display: flex; justify-content: center; align-items: center;">
+    <h1>Coming Soon</h1>
+</section>
