Menu and decoder improvements

--- a/listing_decoder.html
+++ b/listing_decoder.html
@@ -12,7 +12,7 @@ javascript-list:
     <h1>Listing Decoder</h1>
     <strong>ARRRmada merchant listing tool</strong>
     <p>Use this form to decode the custom listing codes</p>
-    <a class="btn" href="{{ site.baseurl }}/" title="View Pirate Chain merchants">◄ HOME</a>
+    <a class="btn-alt" href="{{ site.baseurl }}/" title="View Pirate Chain merchants">HOME</a>
   </div>
 </section>
 
