--- a/listing-decoder.html
+++ b/listing-decoder.html
@@ -31,7 +31,7 @@ javascript-list:
         <h2>Review Merchant Listing</h2>
         <p>
           <strong>STEP 1:</strong> Review the details of the merchant submission to ensure it meets the current 
-          <a href="{{ site.baseurl }}/listing_guidelines" target="_blank" rel="noopener noreferrer">Listing Guidelines</a>
+          <a href="{{ site.baseurl }}/listing-guidelines" target="_blank" rel="noopener noreferrer">Listing Guidelines</a>
         </p>
 
         <label for="merchantIDDInput" >Merchant ID:</label>
