--- a/listing-guidelines.html
+++ b/listing-guidelines.html
@@ -3,10 +3,13 @@ layout: page
 css-list:
   - "assets/css/guidelines.css"
 ---
-<section class="guidelines">
+<section class="hero-section">
   <img class="logo" alt="arrrmada logo" src="{{ site.baseurl }}/assets/img/logo/arrrmada-emblem-light.png"/>
+  <h1>Merchant Listing Guidelines</h1>
+</section>
+<section class="guidelines">
   <div class="content">
-    <h2>Merchant Listing Guidelines</h2>
+    <h2>Guidlines</h2>
 
     <p>
       The following guidelines are designed to ensure merchant listing
@@ -86,6 +89,7 @@ css-list:
         of the merchant's website. Confirm the use of HTTPS and ensure
         there are no security warnings. Consider using a website security
         scanning tool for a more comprehensive review.
+        <br/><br/>
         <ol>
           <li><a href="https://sitecheck.sucuri.net">https://sitecheck.sucuri.net</a></li>
           <li><a href="https://www.urlvoid.com/">https://www.urlvoid.com/</a></li>
@@ -93,6 +97,7 @@ css-list:
           <li><a href="https://observatory.mozilla.org/">https://observatory.mozilla.org/</a></li>
           <li><a href="https://builtwith.com/">https://builtwith.com/</a></li>
         </ol>
+        <br/>
       </li>
 
       <li><b>PAYMENT METHODS:</b> Ensure that
@@ -111,4 +116,5 @@ css-list:
       </li>
     </ol>
   </div>
+</div>
 </section>
