--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ javascript-list:
         and online commerce tools
       </p>
       <a class="btn" href="{{ site.baseurl }}#merchants-section" title="View Pirate Chain merchants">Merchant List</a>
-      <a class="btn" href="{{ site.baseurl }}/payment_gateways" title="Gateways for acceptng payments">Payment Gateways</a>
-      <a class="btn" href="{{ site.baseurl }}/donation_buttons" title="Add a donation button to your website">Donation Buttons</a>
+      <a class="btn" href="{{ site.baseurl }}/payment-gateways" title="Gateways for acceptng payments">Payment Gateways</a>
+      <a class="btn" href="{{ site.baseurl }}/donation-buttons" title="Add a donation button to your website">Donation Buttons</a>
     </div>
   </div>
 </section>
@@ -40,7 +40,7 @@ javascript-list:
         Our incredible merchants are at the heart of growing a strong commerce based community. If you are a online merchant
          that values privacy and financial sovereignty, consider joining the ARRRmada and begin accepting $ARRR today!
 
-        <a class="btn" href="{{ site.baseurl }}/listing_tool" title="Add your store to the directory">List Your Store +</a>
+        <a class="btn" href="{{ site.baseurl }}/listing-tool" title="Add your store to the directory">List Your Store +</a>
       </p>
     </div>
     <div class="merchants">
