--- a/faq.htm
+++ b/faq.htm
@@ -7,10 +7,11 @@ css:
 js:
   - assets/js/global.js
 ---
-
+<section class="hero-section">
+   <h1>Frequently Asked Questions</h1>
+</section>
 <section id="faq">
   <div class="content">  
-    <h1>Frequently Asked Questions</h1>
     
     <div class="faq-item">
         <h3>What and who is the ARRRmada?</h3>
