--- a/faq.htm
+++ b/faq.htm
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: FAQ - ARRRmada
-css: 
-  - assets/css/faq.css
+css-list: 
+  - "assets/css/faq.css"
 ---
 <section class="hero-section">
    <h1>Frequently Asked Questions</h1>
