--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@ css-list:
     
     <div class="faq-item">
         <h2>What payment service providers are available that support ARRR?</h2>
-        <p>Various payment service providers support ARRR. You can find a list of supported providers on the ARRRmada website or the Pirate Chain official website.</p>
+        <p>Various payment service providers support ARRR. You can find a list of supported payment Gateways <a href="{{ site.baseurl }}/payment-gateways">here</a> or the Pirate Chain official website.</p>
     </div>
     
     <div class="faq-item">
