--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,9 @@ css-list:
   - "assets/css/faq.css"
 ---
 <section class="hero-section">
+  <div class="section-wrapper">
    <h1>Frequently Asked Questions</h1>
+  <div>
 </section>
 <section id="faq">
   <div class="content">  
