--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@ css-list:
     
     <div class="faq-item">
         <h2>I want to be an active contributor, what do I have to do?</h2>
-        <p>To become an active contributor, you can get in touch with the ARRRmada team by joining the community discussions on GitHub and/or via the official Pirate Chain community Discord server <a href="https://discord.gg/4ABvFa5hHj" target="_blank" rel="noopener noreferrer">here</a></p>
+        <p>To become an active contributor, you can get in touch with the ARRRmada team by joining the community discussions on GitHub and/or via the official Pirate Chain community Discord server <a href="https://discord.gg/4ABvFa5hHj" target="_blank" rel="noopener noreferrer">here</a>.</p>
     </div>
   </div>
 </section>
