--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@ javascript-list:
       <a href="{{ merchant.url }}" target="_blank" rel="noopener noreferrer">
         <div class="merchant-imgbox">
           <img loading="lazy" class="merchant-img"
-               data-src="{{ site.baseurl }}/assets/img/merchants/{{ merchant.image }}" 
-               src="{{ site.baseurl }}/assets/img/site/default_merchant.png"
+               src="{{ site.baseurl }}/assets/img/merchants/{{ merchant.image }}" 
                alt="{{ merchant.name }}">
         </div>
         <h2>{{ merchant.name }}</h2>
