--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,12 @@ title: FAQ - ARRRmada
 css-list: 
   - "assets/css/faq.css"
 ---
-<section class="hero-section">
+<!-- hero section -->
+<section class="hero-section"
+  style="background-image: url('{{ site.baseurl }}/assets/img/site/Pirate_BG_pattern_grey.jpg');">
+  <div class="content">      
+    <img alt="FAQ ARRRmada" class="logo" src="{{ site.baseurl }}/assets/site/piratefaq.webp"  style="max-width: 250px;margin-bottom: 20px;" />
+    <div>
   <div class="section-wrapper">
    <h1>Frequently Asked Questions</h1>
   </div>
