--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@ css-list:
     <div>
   <div class="section-wrapper">
    <h1>Frequently Asked Questions</h1>
+    <a class="btn" href="{{ site.baseurl }}/" title="View Pirate Chain merchants">◄ HOME</a>
   </div>
 </section>
 <section id="faq">
