--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,7 @@ css-list:
    <h1>Frequently Asked Questions</h1>
     <a class="btn" href="{{ site.baseurl }}/" title="View Pirate Chain merchants">◄ HOME</a>
   </div>
+  </div>
 </section>
 <section id="faq">
   <div class="content">
