--- a/faq.html
+++ b/faq.html
@@ -18,6 +18,7 @@ css-list:
 </section>
 <section id="faq">
   <div class="content">
+     <h1>Frequently Asked Questions</h1>
     {% for faq in site.data.faq.faqs %}
     {% assign replaced_answer = faq.answer | replace: "{{ site.baseurl }}", site.baseurl %}
     <div class="faq-item">
