--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@ css-list:
   - "assets/css/faq.css"
 ---
 <!-- hero section -->
-<section class="hero-section"
+<section class="hero-section faq-hero"
   style="background-image: url('{{ site.baseurl }}/assets/img/site/Pirate_BG_pattern_grey.jpg');">
   <div class="content">      
     <img alt="FAQ ARRRmada" class="logo" src="{{ site.baseurl }}/assets/img/site/piratefaq.webp"  style="max-width: 250px;margin-bottom: 20px;" />
