--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@ css-list:
     <div>
   <div>
    <h1>Frequently Asked Questions</h1>
+    <strong>Help and Support</strong>
       <p>
         The FAQ will help you as a potential merchant to find your way around the ARRRmada directory. 
       </p>
