--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@ css-list:
 <section class="hero-section faq-hero"
   style="background-image: url('{{ site.baseurl }}/assets/img/site/Pirate_BG_pattern_grey.jpg');">
   <div class="content">      
-    <img alt="FAQ ARRRmada" class="logo" src="{{ site.baseurl }}/assets/img/site/arrrmada-faq.webp"  style="max-width: 250px;margin-bottom: 20px;" />
+    <img alt="FAQ ARRRmada" class="logo" src="{{ site.baseurl }}/assets/img/site/arrrmada-faq.png"  style="max-width: 250px;margin-bottom: 20px;" />
     <div>
   <div>
    <h1>Frequently Asked Questions</h1>
