--- a/faq.html
+++ b/faq.html
@@ -31,3 +31,8 @@ css-list:
     {% endfor %}
   </div>
 </section>
+
+<!-- Bottom Divider Art -->
+<div class="faq-divider">
+  <img alt="map" class="logo" src="{{ site.baseurl }}/assets/img/site/divider-map.svg" />
+</div>
