--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@ title: FAQ - ARRRmada
 css-list: 
   - "assets/css/faq.css"
 ---
-<!-- hero section -->
+<!-- FAQ hero section -->
 <section class="hero-section faq-hero"
   style="background-image: url('{{ site.baseurl }}/assets/img/site/Pirate_BG_pattern_grey.jpg');">
   <div class="content">      
@@ -33,8 +33,3 @@ css-list:
     {% endfor %}
   </div>
 </section>
-
-<!-- Bottom Divider Art -->
-<div class="faq-divider">
-  <img alt="map" class="logo" src="{{ site.baseurl }}/assets/img/site/divider-map.svg" />
-</div>
