--- a/listing_tool.html
+++ b/listing_tool.html
@@ -27,7 +27,7 @@ javascript-list:
 
     <h2>Build Your Listing</h2>
     <p style="max-width: 550px; margin: auto;">
-      Design your custom listing, then generate a code for submital to the ARRRmada.com directory.
+      Design your custom listing, then generate a code for submission to the ARRRmada.com directory.
     </p>
     <p>
       <label for="merchantNameInput">Merchant Name <span id="nameCharCount">0/35</span></label>
@@ -92,7 +92,7 @@ javascript-list:
       </p>
       <a class="btn" id="submit_listing" href="{{ site.repo }}/issues/new?template=merchant_listing_submission.yaml&title=&listing_code=" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
 
-      <a style="margin-top:40px;display: block;" href="{{ site.baseurl }}/submission_options" target="_blank" rel="noopener noreferrer">Alternate and Anonymous Submission Options</a>
+      <a class="alt_options" href="{{ site.baseurl }}/submission_options" target="_blank" rel="noopener noreferrer">Alternate and Anonymous Submission Options</a>
     </div>
   </div>
 </section>
