update discord link

--- a/submission_options.html
+++ b/submission_options.html
@@ -26,7 +26,7 @@ css-list:
       <h2>Method 2: Submit via Discord</h2>
       <p>Alternatively, you can submit your listing through our official Pirate Chain community Discord.</p>
       <ol>
-          <li>Join the <a href="https://pirate.black/discord">Pirate Chain Discord server</a>.</li>
+          <li>Join the <a href="https://discord.gg/rBEjCbkdKJ">Pirate Chain Discord server</a>.</li>
           <li>Navigate to the <strong>#arrrmada</strong> channel.</li>
           <li>Post your listing code and attach the image of your store.</li>
       </ol>
