--- a/listing_tool.html
+++ b/listing_tool.html
@@ -27,7 +27,7 @@ javascript-list:
 
     <h2>Build Your Listing</h2>
     <p style="max-width: 550px; margin: auto;">
-      Design your custom listing, then generate a code for submital to the ARRRmada.com directory.
+      Design your custom listing, then generate a code for submission to the ARRRmada.com directory.
     </p>
     <p>
       <label for="merchantNameInput">Merchant Name <span id="nameCharCount">0/35</span></label>
@@ -40,6 +40,17 @@ javascript-list:
       <input type="text" id="merchantURLInput" />
       <button id="merchantURLButton" onclick="updateMerchantURL()">Add Link URL</button>
       <p id="urlMessage"></p>
+
+      <label for="tagSelectionCount">Select Tags <span id="tagSelectionCount">0/6</span></h3>  
+        <div id="tagsInput" class="grid-container">
+          {% assign sortedTags = site.data.tags | sort: 'name' %}
+          {% for tag in sortedTags %}
+            <div class="grid-item">
+              <input type="checkbox" id="tag-{{tag.id}}" data-id="{{tag.id}}" data-name="{{tag.name}}" onchange="updateTagSelection()" />
+              <label class="tag_name" for="tag-{{tag.id}}">{{tag.name}}</label>
+            </div>
+          {% endfor %}
+        </div>
     </p>
 
     <!-- Listing Preview -->
@@ -56,21 +67,10 @@ javascript-list:
       <a href="" id="merchant_url" target="_blank" rel="noopener noreferrer"></a>
     </p>
 
-    <label for="merchantImageInput" >Upload Listing Image:</label>
+    <label for="merchantImageInput" >Upload Image to Preview Listing:</label>
     <input type="file" id="merchantImageInput" accept="image/*" onchange="updateMerchantImage()" />
     <input type="hidden" id="merchant_image_filename" />
     <p id="uploadMessage"></p>
-
-    <label for="tagSelectionCount">Select Tags <span id="tagSelectionCount">0/6</span></h3>  
-    <div id="tagsInput" class="grid-container">
-      {% assign sortedTags = site.data.tags | sort: 'name' %}
-      {% for tag in sortedTags %}
-        <div class="grid-item">
-          <input type="checkbox" id="tag-{{tag.id}}" data-id="{{tag.id}}" data-name="{{tag.name}}" onchange="updateTagSelection()" />
-          <label class="tag_name" for="tag-{{tag.id}}">{{tag.name}}</label>
-        </div>
-      {% endfor %}
-    </div>
 
     <p class="generate_desc">
       Satisfied with your listing design?
@@ -87,28 +87,12 @@ javascript-list:
     
     <div id="submitListing">
       <h2>SUBMIT YOUR LISTING</h2>
-      <p>You have two options to submit the code and thus your listing. One is via Github, for which you need an account on Github. And secondly, with the help of a Sapling transaction.
       <p>
-        <b>SAVE YOUR CODE</b> - The code you've generated represents your unique listing. Be sure to save it before leaving this page.
+        Submit your listing application by pasting the above code into our GitHub form, and uploading the image.     
       </p>
-      <p>
-         Please copy the entire code, including the <b>"---BEGIN CODE---"</b> and <b>"---END CODE---"</b> parts.
-      </p>
-      <p>
-        To submit your listing for review in the ARRRmada directory, please initiate a GitHub form below where you will paste your code and upload the chosen image.
-      </p>
-      <p>
-        <a class="btn" href="{{ site.repo }}/issues/new?assignees=&labels=&projects=&template=merchant_listing_submission.yaml" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
-      </p>
-      <p>
-       You also have the second <strong>option to submit your entry with a Sapling transaction</strong>. You can simply copy the complete code and send it as a memo within the transaction to the following address:</p>
-      <p>
-        zs1uud9mr4mth03cnk96d2ssjhjzg28ugq8zk5vvezqam9h9em3sr9d7582ststcrrcqecujrcx9w9
-      </p>
-      <p>Please note that if you register your listing in a Sapling transaction, you must also send the path to an image with the generated listing code if an image is to be displayed in 
-        addition to the link and description. </p>
-      <p>Please be patient, both options may cause delays as the entries are checked manually. 
-      </p>
+      <a class="btn" id="submit_listing" href="{{ site.repo }}/issues/new?template=merchant_listing_submission.yaml&title=&listing_code=" target="_blank" rel="noopener noreferrer">SUBMIT LISTING</a>
+
+      <a class="alt_options" href="{{ site.baseurl }}/submission_options" target="_blank" rel="noopener noreferrer">Alternate and Anonymous Submission Options</a>
     </div>
   </div>
 </section>
